Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119216

macOS: REG->6.5: DnD with custom text MIME type got broken/crashes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.4, 6.6.2, 6.7.0 FF
    • 6.5, 6.6
    • Quick: Other
    • None
    • MacOS
    • All
    • 09afa7575 (dev), 90b033d77 (6.6), 0b60450ee (dev), e0a63555e (tqtc/lts-6.5), 3cec57d9c (6.6), 3c12ded68 (tqtc/lts-6.5), 2ba67fd91 (dev), 19f9c4de2 (6.6), 2c57f0ba4 (tqtc/lts-6.5), 97bb0ecfe (dev), edc4e5554 (6.7), f4e817741 (6.6), 137a32575 (6.6.2)

      Regression!

      If Item's attached property Drag.mimeData is set to some custom MIME type like "application/json" then DnD doesn't work with this warning:

      qrc:/externaldraganddrop/DragAndDropTextItem.qml:50:5: QML QQuickItem (parent or ancestor of QQuickDragAttached): Mime data contains a string, but mime type application/json is not a supported text type

      Also using successor of QUtiMimeConverter on MacOS leads to crash due to uncaught exception:

      2023-11-16 18:23:46.089128+0100 externaldraganddropexample[10350:13050344] *** Terminating app due to uncaught exception 'NSGenericException', reason: 'There are 0 items on the pasteboard, but 1 drag images. There must be 1 draggingItem per pasteboardItem.'

      It works correctly with Qt 6.4.3 and got broken in 6.5-6.6

      Attached modified Qt externaldraganddrop example.

        For Gerrit Dashboard: QTBUG-119216
        # Subject Branch Project Status CR V